# sidh

./: .gitignore  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
sidh-java/: build.gradle
sidh-native/: CMakeLists.txt  build.gradle
sidh-native/src/androidTest/java/org/pqcrypto/sidh/: NativeSIDHProviderTest.java
sidh-native/src/main/: AndroidManifest.xml
sidh-native/src/main/cpp/: config.h  sidh-jni.c  sidh.c
sidh-native/src/main/cpp/P503/: P503.c
sidh-native/src/main/cpp/random/: random.c
sidh-native/src/main/java/org/pqcrypto/sidh/: NativeSIDHProvider.java  NoSuchProviderException.java  SIDHProvider.java
